crates/swc/tests/tsc-references/types/primitives/boolean/invalidBooleanAssignments/input.ts/es5.2.minified/output.js
var E, E1, M;
(E = E1 || (E1 = {
}))[E.A = 0] = "A";
var C = function() {
    "use strict";
    !function(instance, Constructor) {
        if (!(instance instanceof Constructor)) throw new TypeError("Cannot call a class as a function");
    }(this, C);
};
(M || (M = {
})).a = 1, M = !0;
